[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlatSpawner.gd" type="Script" id=1]

[node name="PlatSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="MinX" type="Position2D" parent="."]
position = Vector2( 119, 0 )

[node name="MaxX" type="Position2D" parent="."]
position = Vector2( 650, 0 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="PlatParent" type="Node" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
